<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="VERSION_NAME">9.0010.05</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_category_title">action</string>
    <string name="app_name">Stability Monitor</string>
    <string name="app_name1">DeviceInfo</string>
    <string name="apr_info_tab">APR Info</string>
    <string name="apr_latest_tab">APR Last</string>
    <string name="build_number_title">Build Number</string>
    <string name="check_allowed_upload_preference_title">Check Whether Allowed to Upload</string>
    <string name="check_category_title">check</string>
    <string name="check_dutinfo_preference_title">Check DUTInfo</string>
    <string name="check_is_wifi_only_title">Check is Wifi Only</string>
    <string name="check_network_preference_title">Check Network</string>
    <string name="defaule_dp_size">0</string>
    <string name="default_encrypted_key" />
    <string name="device_info_default" />
    <string name="device_model_title">Device Model</string>
    <string name="dmc_regular_que_default_status">false</string>
    <string name="dropbox_log_lines_title">Dropbox Log Lines</string>
    <string name="dut_info_category_title">About phone</string>
    <string name="dut_info_tab">DUT Info</string>
    <string name="encrypted_category_title">Encryption</string>
    <string name="encrypted_title">Encrypted Key</string>
    <string name="hw_version_title">Hardware Version</string>
    <string name="imei_number_title">IMEI</string>
    <string name="information_category_title">information</string>
    <string name="kernel_version_title">Kernel version</string>
    <string name="latest_dropbox_tag_preference_title">Latest Dropbox Tag</string>
    <string name="long_que_info_tab">Long Que</string>
    <string name="main_tab">Main</string>
    <string name="meid_number_title">MEID</string>
    <string name="on_off_category_title">On/Off</string>
    <string name="on_off_preference_summary" />
    <string name="on_off_preference_title">On/Off</string>
    <string name="power_on_cause">power on cause : %1$s</string>
    <string name="power_on_cause_defalut_value">unknown</string>
    <string name="poweroncause_preference_title">Power On Cause</string>
    <string name="queue_upload_interval_default_value">30</string>
    <string name="queue_upload_interval_dialog_title">Queue Interval</string>
    <string name="queue_upload_interval_summary">%1$s Mins</string>
    <string name="queue_upload_interval_title">Queue Interval</string>
    <string name="regular_upload_interval_default_value">18</string>
    <string name="regular_upload_interval_dialog_title">Regular Interval</string>
    <string name="regular_upload_interval_summary">%1$s Hrs</string>
    <string name="regular_upload_interval_title">Regular Interval</string>
    <string name="reset_data_preference_title">Reset Data</string>
    <string name="search_menu_title">Search</string>
    <string name="serial_no_title">Serial Number</string>
    <string name="setting_tab">Setting</string>
    <string name="short_que_info_tab">Short Que</string>
    <string name="stability_log_size_category_title">Log Size</string>
    <string name="stability_version_title">Stability Monitor Version</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="switch_long_que_on_off_title">Switch Long Que On/Off</string>
    <string name="upload_info_category_title">About Upload</string>
    <string name="upload_location_default_value">0</string>
    <string name="upload_location_dialog_title">Upload Location</string>
    <string name="upload_location_title">Upload Location</string>
    <string name="upload_now_dialog_title">Which location to save logs?</string>
    <string name="upload_now_preference_title">Upload Now</string>
</resources>
