<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/dut_info_category_title">
        <Preference android:title="@string/stability_version_title" android:key="stability_monitor_version" android:summary="@string/VERSION_NAME" />
        <Preference android:title="@string/hw_version_title" android:key="hw_version" android:summary="@string/device_info_default" />
        <Preference android:title="@string/device_model_title" android:key="device_model" android:summary="@string/device_info_default" />
        <Preference android:title="@string/build_number_title" android:key="build_number" android:summary="@string/device_info_default" />
        <Preference android:title="@string/meid_number_title" android:key="meid_number" android:summary="@string/device_info_default" />
        <Preference android:title="@string/imei_number_title" android:key="imei_number" android:summary="@string/device_info_default" />
        <Preference android:title="@string/serial_no_title" android:key="serial_no" android:summary="@string/device_info_default" />
        <Preference android:title="@string/kernel_version_title" android:key="kernel_version" android:summary="@string/device_info_default" />
    </PreferenceCategory>
</PreferenceScreen>